src/src/objects/LMS_Leave__c.object
<CustomObject>
    <fields>
        <fullName>LMS_Employee__c</fullName>
        <label>Employee</label>
        <referenceTo>LMS_Employee__c</referenceTo>
        <relationshipLabel>Leaves</relationshipLabel>
        <relationshipName>LMS_Leaves</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LMS_From__c</fullName>
        <label>From</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LMS_Number_of_Days__c</fullName>
        <formula>(LMS_To__c  -  LMS_From__c) + 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LMS_Reason__c</fullName>
        <label>Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LMS_To__c</fullName>
        <label>To</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LMS_Type_of_Leave__c</fullName>
        <label>Type of Leave</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CL(Casual Leave)</fullName>
                </value>
                <value>
                    <fullName>SL(Sick Leave)</fullName>
                </value>
                <value>
                    <fullName>LOP(Loss of Pay)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Leave</label>
    <nameField>
        <displayFormat>L-{000}</displayFormat>
        <label>Leave</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Leaves</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>